# BXInventory

./: Cargo.toml  README.md
src/: main.rs  parts.rs
ui/: appwindow.slint
ui/structs/: appstruct.slint
